--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.kafka.consumer.bootstrap-servers: 192.168.99.100:9092
 spring.kafka.producer.bootstrap-servers: 192.168.99.100:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer:  org.apache.kafka.common.serialization.StringSerializer
+cassandra.keyspace=sample
