--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,19 @@
 			<artifactId>spring-boot-starter-data-cassandra</artifactId>
 		</dependency>
 		
+		<dependency>
+
+            <groupId>org.apache.kafka</groupId>
+
+            <artifactId>kafka-streams</artifactId>
+
+            <version>1.0.1</version>
+
+        </dependency>
+		
 	</dependencies>
+	
+	
 	<!-- 
 	<dependencyManagement>
 		<dependencies>
